--- a/src/app/groups/edit-group/edit-group.component.html
+++ b/src/app/groups/edit-group/edit-group.component.html
@@ -25,9 +25,9 @@
           </mat-form-field>
           <mat-form-field>
             <mat-label>{{ 'Group_Component.Create_Group_Component.labelType'| translate}}</mat-label>
-            <mat-select formControlName="groupTypeId">
-              <mat-option *ngFor="let type of groupType" [value]="groupTypeId" > 
-              {{ type.value }}
+            <mat-select formControlName="groupTypeId" [(value)]="groupTypeId">
+              <mat-option *ngFor="let type of groupType" [value]="type.value" > 
+              {{ type.viewValue }}
               </mat-option>
             </mat-select>
           </mat-form-field>
@@ -43,14 +43,14 @@
             <ng-container matColumnDef="minValue">
               <th mat-header-cell *matHeaderCellDef>{{ 'Group_Component.Create_Group_Component.tableColFeeWithDraw'| translate}}</th>
               <td mat-cell *matCellDef="let element, let index"> 
-                  <input matInput  (keypress)="onKey($event, index)" id="{{element.cardType}}_minValue" value="{{element.minValue}}"> 
+                  <input matInput type="number" (blur)="onBlur($event, index)" id="{{element.cardType}}_minValue" value="{{element.minValue}}"> 
               </td>
             </ng-container>
 
             <ng-container matColumnDef="maxValue">
               <th mat-header-cell *matHeaderCellDef>{{ 'Group_Component.Create_Group_Component.tableColFeeRollTerm'| translate}}</th>
               <td mat-cell *matCellDef="let element, let index"> 
-                  <input matInput (keypress)="onKey($event,index)" id="{{element.cardType}}_maxValue" value="{{element.maxValue}}"> 
+                  <input matInput type="number" (blur)="onBlur($event,index)" id="{{element.cardType}}_maxValue" value="{{element.maxValue}}"> 
               </td>
             </ng-container>
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
