--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -10,14 +10,14 @@
     This content will be hidden for smaller screens.
   -->
 
-  <div fxFlex="70%" fxLayout="column" fxLayoutAlign="center center" fxHide.lt-md class="cover">
+  <!-- <div fxFlex="0%" fxLayout="column" fxLayoutAlign="center center" fxHide.lt-md class="cover">
     <div class="cover-content">
       <h1 class="mat-display-1 cover-title">{{'APP_NAME'| translate}}</h1>
       <p class="mat-headline cover-description">
         {{'Login_Component.APP_SLOGAN' | translate}}!
       </p>
     </div>
-  </div>
+  </div> -->
 
   <!--
     Content in 30%: (TODO: Allow customization of Name, Logo and Contact Information by organization)
@@ -28,7 +28,7 @@
       Footer
   -->
 
-  <div fxLayout="column" fxFlex.gt-md="1 0 30%" class="login-container">
+  <div fxLayout="column" fxFlex.gt-md="1 0 100%" class="login-container">
 
     <!-- Language Selector to the extreme right -->
     <div fxLayout="row-reverse" fxFlex="1 0 auto">
@@ -41,6 +41,8 @@
     <!-- Logo with Organization Name -->
     <div fxLayout="row" fxLayoutAlign="center center" fxFlex="1 0 auto">
       <img src="assets/images/midas-logo-flat.png" alt="Midas Logo" class="img-container">
+      
+      
     </div>
 
     <!--
