--- a/src/app/transactions/rollTerm-schedule-transaction/dialog/roll-term-schedule/roll-term-schedule-dialog.component.html
+++ b/src/app/transactions/rollTerm-schedule-transaction/dialog/roll-term-schedule/roll-term-schedule-dialog.component.html
@@ -133,14 +133,14 @@
                 )"
               >gavel
             </mat-icon>
-            <mat-icon
+            <!-- <mat-icon
               mat-dialog-close
               style="color: green;"
               title="Thực hiện thu tiền phí "
               (click)="addFeeDialogByTransactionId(true,transaction.trnRefNo)"
             >
               attach_money
-            </mat-icon>
+            </mat-icon> -->
           </td>
         </ng-container>
         <ng-container matColumnDef="expandedDetail">
