--- a/src/app/transactions/manage-transaction/manage-transaction.component.html
+++ b/src/app/transactions/manage-transaction/manage-transaction.component.html
@@ -45,7 +45,7 @@
           <img src="assets/images/icons/transaction.svg" />
           <div style="display: flex" fxLayout="column">
             <span style="font-size: 20px; margin-top: 8px; padding-top: 5px">{{ totalFeeAmount | money }}</span>
-            <span>&nbsp;Phí thu được</span>
+            <span>&nbsp;Phí thu được ({{ (totalFeeAmount/totalTerminalAmount) * 100 | number: '1.0-2' }}%)</span>
           </div>
         </div>
         <!-- <div fxLayout="row wrap" *midasHasPermission="'POS_UPDATE'" fxFlex="20%" class="container m-b-20">
@@ -200,7 +200,7 @@
           Người tạo / <br />
           Máy Pos
         </th>
-        <td mat-cell *matCellDef="let journalEntry">
+        <td mat-cell *matCellDef="let journalEntry" style="word-wrap: break-word; width: 200px">
           <!-- {{ journalEntry.officeName }} <br /> -->
           <span class="blue_text">{{ journalEntry.createdByName }} </span><br />
           <span class="red_text">{{ journalEntry.terminalId }}</span>
@@ -235,7 +235,10 @@
 
       <ng-container matColumnDef="feeAmount">
         <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef mat-sort-header>Phí thu được</th>
-        <td mat-cell fxHide fxShow.gt-md *matCellDef="let journalEntry">{{ journalEntry.feeAmount | money }}</td>
+        <td mat-cell fxHide fxShow.gt-md *matCellDef="let journalEntry">
+          <label>{{ journalEntry.feeAmount | money }}</label>
+
+        </td>
       </ng-container>
 
       <ng-container matColumnDef="terminalAmount_feeAmount">
@@ -243,10 +246,10 @@
         <td mat-cell fxHide fxShow.gt-md *matCellDef="let journalEntry">{{ journalEntry.terminalAmount_feeAmount | number  }}</td>
       </ng-container>
 
-      <ng-container matColumnDef="cogsAmount">
+      <!-- <ng-container matColumnDef="cogsAmount">
         <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef mat-sort-header>SP vốn</th>
         <td mat-cell fxHide fxShow.gt-md *matCellDef="let journalEntry">{{ journalEntry.cogsAmount | money }}</td>
-      </ng-container>
+      </ng-container> -->
 
       <ng-container matColumnDef="pnlAmount">
         <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef mat-sort-header>PNL</th>
