fix batch_trace no
fix batch_trace no

--- a/src/app/transactions/manage-transaction/manage-transaction.component.html
+++ b/src/app/transactions/manage-transaction/manage-transaction.component.html
@@ -170,6 +170,11 @@
             Export
           </button>
         </div>
+        <!-- <div fxFlex="18%">
+          <button style="margin-top: 8px; height: 40px" (click)="exportTransactionForPartner()" color="primary" mat-raised-button>
+            Export Cho đối tác
+          </button>
+        </div> -->
       </div>
     </mat-expansion-panel>
   </mat-accordion>
