--- a/src/app/clients/balance-account-client/balance-account-client.component.html
+++ b/src/app/clients/balance-account-client/balance-account-client.component.html
@@ -54,7 +54,7 @@ a<!-- <div fxLayout="row" fxLayout.lt-md="column" class="fluidcontainer " fxLayo
               </ng-container>
 
               <ng-container matColumnDef="account_balance_derived">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header> Tổng số dư</th>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Tổng số dư:&emsp;<p style="color: green; font-weight: bold; margin: 0;">{{ totalAmountDerived | money}}</p></th>
                 <td mat-cell
                     *matCellDef="let account"> {{ account.account_balance_derived | money}} </td>
               </ng-container>
@@ -101,7 +101,7 @@ a<!-- <div fxLayout="row" fxLayout.lt-md="column" class="fluidcontainer " fxLayo
       <mat-card class="container">
         <mat-card  fxFlex="100" class="m-b-10">
           <mat-card-header>
-            <div fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column" >
+            <div fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column" [formGroup]="formFilter2">
             <div style="margin-top: 15px;" fxLayout="row" fxFlex="100">
               <img src="../../../assets/images/icons/account.svg">
               <div style="margin: 5px; margin-top: 5px;">
@@ -125,8 +125,10 @@ a<!-- <div fxLayout="row" fxLayout.lt-md="column" class="fluidcontainer " fxLayo
           </div>
           </mat-card-header>
 
+          <!-- <table mat-table class="mat-elevation-z8" multiTemplateDataRows (matSortChange)="sortData($event)"
+                  [dataSource]="accountsShow" matSort> -->
           <mat-card-content>
-            <table mat-table class="mat-elevation-z8" multiTemplateDataRows [dataSource]="dataSource2">
+            <table mat-table matSort class="mat-elevation-z8" multiTemplateDataRows [dataSource]="accountsShow2" (matSortChange)="sortData2($event)" #Table2Sort="matSort">
 
               <ng-container matColumnDef="customer_name">
                 <th mat-header-cell *matHeaderCellDef>Tên khách hàng</th>
@@ -148,7 +150,7 @@ a<!-- <div fxLayout="row" fxLayout.lt-md="column" class="fluidcontainer " fxLayo
               </ng-container>
 
               <ng-container matColumnDef="account_balance_derived">
-                <th mat-header-cell *matHeaderCellDef> Tổng số dư</th>
+                <th mat-header-cell *matHeaderCellDef>Tổng số dư:&emsp;<p style="color: red; font-weight: bold; margin: 0;">{{ totalAmountDerived2 | money}}</p></th>
                 <td mat-cell
                     *matCellDef="let account"> {{ account.account_balance_derived | money}} </td>
               </ng-container>
@@ -184,7 +186,7 @@ a<!-- <div fxLayout="row" fxLayout.lt-md="column" class="fluidcontainer " fxLayo
               <!--[routerLink]="['transactions/view', row.transactionId]"-->
             </table>
           </mat-card-content>
-          <mat-paginator paginator [length]="accountFilter.length" [pageSize]="10" [pageSizeOptions]="[10, 25, 50, 100]"
+          <mat-paginator #Table2Paginator="matPaginator" [length]="accountFilter2.length" [pageSize]="10" [pageSizeOptions]="[10, 25, 50, 100]"
                         showFirstLastButtons></mat-paginator>
         </mat-card>
       </mat-card>
