--- a/src/app/transactions/fee-paid-management/fee-paid-management.component.scss
+++ b/src/app/transactions/fee-paid-management/fee-paid-management.component.scss
@@ -33,6 +33,7 @@ tr.example-detail-row {
 
 .example-element-row td {
   border-bottom-width: 0;
+  padding: 10px 0;
 }
 
 .example-element-detail {
