--- a/src/app/clients/balance-account-client/balance-account-client.component.html
+++ b/src/app/clients/balance-account-client/balance-account-client.component.html
@@ -10,7 +10,7 @@ a<!-- <div fxLayout="row" fxLayout.lt-md="column" class="fluidcontainer " fxLayo
                   <img src="../../../assets/images/icons/account.svg">
                   <div style="margin: 5px; margin-top: 20px;">
                     <h3 style="margin: 5px;">Danh sách công nợ phải trả (tạm ứng) của khách hàng</h3>
-                    <span>Tổng cộng: &nbsp;</span> {{dataSource.length}}
+                    <span>Tổng cộng: &nbsp;</span> {{totalAccOfUser}}
                   </div>
                 </div>
 
@@ -106,7 +106,7 @@ a<!-- <div fxLayout="row" fxLayout.lt-md="column" class="fluidcontainer " fxLayo
               <img src="../../../assets/images/icons/account.svg">
               <div style="margin: 5px; margin-top: 5px;">
                 <h3 style="margin: 5px;">Danh sách công nợ phải thu của khách hàng</h3>
-                <span>Tổng cộng: &nbsp;</span> {{dataSource2.length}}
+                <span>Tổng cộng: &nbsp;</span> {{totalAccOfUser2}}
               </div>
             </div>
             <mat-form-field fxFlex="48">
