--- a/src/app/savings/savings-account-view/savings-account-view.component.html
+++ b/src/app/savings/savings-account-view/savings-account-view.component.html
@@ -6,9 +6,9 @@
 
       <div class="profile-image-container">
         <div>
-          <img mat-card-md-image class="profile-image"
+          <img mat-card-md-image class="profile-image iconBank"
                matTooltip="Savings Account"
-               [src]="'assets/images/savings_account_placeholder.png'">
+               [src]="iconBank">
         </div>
       </div>
 
